2003-11-27  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs: Shift count can be up to 31 for int/uint and 63
	for long/ulong.

2003-11-26  Miguel de Icaza  <miguel@ximian.com>

	* statement.cs (Block.LookupLabel): Also look for the label on the
	children blocks.  Use a hash table to keep track of visited
	nodes. 

	* cfold.cs (IntConstant to UIntConstant mapping): Only return if
	we actually did transform the other operand, otherwise fall back
	to the common codepath that casts to long.

	* cs-tokenizer.cs: Use the same code pattern as the int case.
	Maybe I should do the parsing myself, and avoid depending on the
	Parse routines to get this done.

2003-11-25  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs: Apply fix from l_m@pacbell.net (Laurent Morichetti),  
	which fixes bug 51347.  This time test it.
	
	* expression.cs: Make TypeOfVoid derive from TypeOf, so code in
	attributes for example can not tell the difference between these.
	The difference was only a syntax feature of the language. 

	* attribute.cs: Apply attributes to delegates.

	* delegate.cs: Call the apply attributes method.

2003-11-24  Miguel de Icaza  <miguel@ximian.com>

	* convert.cs (TryImplicitIntConversion): One line bug fix: we were
	comparing 0 vs Byte.MinValue, not the value

	(ImplicitConversionRequired): When reporting a conversion error,
	use error 31 to print out the constant error instead of the
	simpler 29.

	* expression.cs: Apply fix from l_m@pacbell.net (Laurent Morichetti),  
	which fixes bug 51347.
	
2003-11-22  Miguel de Icaza  <miguel@ximian.com>

	* driver.cs: Applied patch from gert.driesen@pandora.be (Gert Driesen) 
	which fixes the -warnaserror command line option.
	
2003-11-21  Miguel de Icaza  <miguel@ximian.com>

	* cfold.cs (DoNumericPromotions): During constant folding of
	additions on UIntConstant, special case intconstants with
	IntConstants like we do on the expression binary operator. 

2003-11-12  Miguel de Icaza  <miguel@ximian.com>
